# Convo

./: .gitignore
client/: .gitignore  filestructure.txt  package.json
client/src/: App.js  index.js
client/src/components/: Footer.js  Login.js  MeetingDetails.js  MeetingRoom.js  Meetings.js  Messages.js  Navbar.js  PrivateRoute.js  Register.js  UserProfile.js
client/src/pages/: HomePage.js
client/src/services/: api.js
mobile/: Cargo.toml
server/: Cargo.toml  README.md  diesel.toml
server/src/: handlers.rs  main.rs  middleware.rs  models.rs  schema.rs  services.rs  utils.rs  ws.rs
