[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0" # Web framework
actix-rt = "2.5"  # Actix runtime
diesel = { version = "2.0", features = ["postgres", "dotenv"] } # ORM and database
dotenv = "0.15"   # Environment variable management
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0" # JSON handling
tokio = { version = "1", features = ["full"] } # Asynchronous runtime
