[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.3.1"
actix-cors = "0.6"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.13.0"
jsonwebtoken = "8.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.17"
r2d2 = "0.8"
futures = "0.3"
